--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "npm run clean && npm run build:webpack",
     "dev": "NODE_ENV=development npm start",
     "start": "node devServer.js",
+    "prod": "NODE_ENV=production npm run start:prod",
+    "start:prod": "node server.js",
     "lint": "eslint src"
   },
   "repository": {
