--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-plugin-babel": "^3.0.0",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
@@ -47,6 +49,7 @@
     "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
+    "axios": "^0.14.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.1.1",
