--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "clean": "rimraf dist",
     "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "dev": "NODE_ENV=development npm start",
+    "dev": "cross-env NODE_ENV=development npm start",
     "start": "node devServer.js",
-    "prod": "NODE_ENV=production npm run start:prod",
+    "prod": "cross-env NODE_ENV=production npm run start:prod",
     "start:prod": "node server.js",
     "lint": "eslint src"
   },
