--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
     "dev": "cross-env NODE_ENV=development npm start",
-    "start": "node devServer.js",
-    "prod": "cross-env NODE_ENV=production npm run start:prod",
-    "start:prod": "node server.js",
+    "start": "node server.js",
+    "prod": "cross-env NODE_ENV=production npm run start",
     "lint": "eslint src"
   },
   "repository": {
