--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.1.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "react-router": "3.0.0",
+    "react-router-redux": "4.0.6"
   }
 }
